# libtypec

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README  cmake_install.cmake  install_manifest.txt  libtypec.c  libtypec.h  libtypec.pc  libtypec.so.0.5.2  libtypec.so.5  libtypec_config.h  libtypec_dbgfs_ops.c  libtypec_ops.h  libtypec_sysfs_ops.c  meson.build  meson_options.txt
utils/: CMakeLists.txt  Makefile  cmake_install.cmake  libtypec_utils_config.h  libtypec_utils_config.h.in  lstypec  lstypec.c  lstypec.h  meson.build  typecstatus  typecstatus.c  ucsicontrol.c  usbcview.c
